# NNComputer

./: .gitignore  CMakeLists.txt  README.md
include/: NN_gates.h  full_adder.h
src/: NN_gates.c  full_adder.c  main.c
tests/: NN_and_test.c  NN_nand_test.c  NN_nor_test.c  NN_not_test.c  NN_or_test.c  NN_xnor_test.c  NN_xor_test.c  full_adder_16_test.c  full_adder_1_test.c  full_adder_32_test.c  full_adder_64_test.c  full_adder_8_test.c
